WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84670
[EFL][DRT] "resource,request,willsend" signal needs to provide more information
https://bugs.webkit.org/show_bug.cgi?id=84670
Summary
[EFL][DRT] "resource,request,willsend" signal needs to provide more information
Chris Dumez
Reported
2012-04-23 23:15:50 PDT
The "resource,request,willsend" signal only provide some information about the network request currently. This information is not enough to support LayoutTestController's dumpResourceLoadCallbacks() in EFL's DumpRenderTree. We need to provide more information about the network request as well as information about the possible redirect response.
Attachments
Patch
(16.48 KB, patch)
2012-04-23 23:24 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.48 KB, patch)
2012-04-25 01:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-04-23 23:24:26 PDT
Created
attachment 138497
[details]
Patch
Gyuyoung Kim
Comment 2
2012-04-25 00:38:55 PDT
Comment on
attachment 138497
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=138497&action=review
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:200 > + redirectResponse = &responseBuffer;
I wonder why you don't use redirectResponse directly in order to send messages to application via signal.
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:201 > + }
Add blank line to here.
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:203 > +
It is better to remove blank line.
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:205 > +
ditto.
Chris Dumez
Comment 3
2012-04-25 01:13:22 PDT
Created
attachment 138756
[details]
Patch Fix blank lines issues.
Gyuyoung Kim
Comment 4
2012-04-25 01:50:45 PDT
One more question. Is there any unskip test by this patch?
Chris Dumez
Comment 5
2012-04-25 01:53:24 PDT
Gyuyoung: No. As explained, the patch is split in several parts (84670, 81891, 84129). On its own, it does not allow unskipping test cases.
Gyuyoung Kim
Comment 6
2012-04-25 01:54:34 PDT
Bug 81891
has unskip tests. Ok. LGTM.
WebKit Review Bot
Comment 7
2012-04-26 00:08:50 PDT
Comment on
attachment 138756
[details]
Patch Clearing flags on attachment: 138756 Committed
r115294
: <
http://trac.webkit.org/changeset/115294
>
WebKit Review Bot
Comment 8
2012-04-26 00:09:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug