[EFL][DRT] "resource,request,willsend" signal needs to provide more information https://bugs.webkit.org/show_bug.cgi?id=84670

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-04-26
Reviewed by Andreas Kling.

Source/WebKit/efl:

The "resource,request,willsend" signal now provides more information
about the network request as well as information about the possible
redirect response. This extra information will be needed to support
LayoutTestController's dumpResourceLoadCallbacks() in EFL's
DumpRenderTree.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::dispatchWillSendRequest):
(WebCore::FrameLoaderClientEfl::assignIdentifierToInitialRequest):
(WebCore::FrameLoaderClientEfl::dispatchDecidePolicyForNavigationAction):
* ewk/ewk_frame.cpp:
(ewk_frame_request_will_send):
* ewk/ewk_frame.h:
* ewk/ewk_private.h:
* ewk/ewk_view.h:

Tools:

Handle in EFL's DumpRenderTree the new Ewk_Frame_Resource_Messages now
passed with the "resource,request,willsend" signal and dump
information about the network request and the possible network
response if LayoutTestController's dumpResourceLoadCallbacks() returns
true.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(pathSuitableForTestResult):
(urlSuitableForTestResult):
(descriptionSuitableForTestResult):
(DumpRenderTreeChrome::onWillSendRequest):

Canonical link: https://commits.webkit.org/102443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115294 268f45cc-cd09-0410-ab3c-d52691b4dbfc